// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Details renders correctly 1`] = `
<section
  className="overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-900"
>
  <section
    className="items-start border-b border-zinc-200 last:border-b-0 dark:border-zinc-800 sm:!flex-row"
  >
    <span
      className="block min-w-40 px-4 py-3.5 !text-sm font-medium"
    >
      label
    </span>
    <span
      className="block px-4 py-3.5 !text-sm font-medium !text-zinc-800 dark:!text-zinc-200"
    >
      content
      <br />
    </span>
  </section>
</section>
`;

exports[`Details renders correctly with badges 1`] = `
<section
  className="overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-900"
>
  <section
    className="items-start border-b border-zinc-200 last:border-b-0 dark:border-zinc-800 sm:!flex-row"
  >
    <span
      className="block min-w-40 px-4 py-3.5 !text-sm font-medium"
    >
      label
    </span>
    <div
      className="px-4 py-3.5"
    >
      <span
        color="indigo"
        rounded="full"
      >
        content
      </span>
    </div>
  </section>
</section>
`;

exports[`Details renders correctly with links 1`] = `
<section
  className="overflow-hidden rounded-xl bg-zinc-100 dark:bg-zinc-900"
>
  <section
    className="items-start border-b border-zinc-200 last:border-b-0 dark:border-zinc-800 sm:!flex-row"
  >
    <span
      className="block min-w-40 px-4 py-3.5 !text-sm font-medium"
    >
      label
    </span>
    <div
      className="px-4 py-3.5"
    >
      <a
        className="flex items-center gap-2 !text-sm text-indigo-600 hover:!underline focus-visible:!underline dark:text-indigo-400"
        href="https://example.com"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        rel="noopenner noreferrer nofollow"
        target="_blank"
      >
        content
         
        <svg
          fill="none"
          height={12}
          viewBox="0 0 20 20"
          width={12}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M13.75 1.875H18.125V6.25M17.1875 2.8125L12.5 7.5M10.625 3.125H5C4.50272 3.125 4.02581 3.32254 3.67417 3.67417C3.32254 4.02581 3.125 4.50272 3.125 5V15C3.125 15.4973 3.32254 15.9742 3.67417 16.3258C4.02581 16.6775 4.50272 16.875 5 16.875H15C15.4973 16.875 15.9742 16.6775 16.3258 16.3258C16.6775 15.9742 16.875 15.4973 16.875 15V9.375"
            stroke="currentColor"
            strokeLinecap="round"
            strokeLinejoin="round"
            strokeWidth="1.25"
          />
        </svg>
      </a>
    </div>
  </section>
</section>
`;
